--- a/adminuserpage.html
+++ b/adminuserpage.html
@@ -32,7 +32,7 @@
 
   <body>
     
-    <div class="container-fluid adminheader">
+    <div class="adminheader container-fluid">
       <center>
         <a style="text-decoration: none;"href="adminlandingpage"><h1>Admin Control Panel</h1></a>
         <div class="search-container">
